<resources>
    <string name="login_hello">Hello!</string>
    <string name="login_footer">Welcome Back</string>
    <string name="login_footer_message">You are only allowed to login using \n your college GSuite email.</string>
    <string name="welcome">Welcome!</string>
    <string name="login_text">Login to your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset_text">Weak memory? Get Help</string>
    <string name="auth_text_login">Or Login with</string>
    <string name="auth_text_signup">Or Sign Up with</string>
    <string name="singup_text">Don\'t have an account. Create One.</string>
    <string name="create_account">Create your Account</string>
    <string name="email">Email</string>
    <string name="signup">Sign Up</string>
    <string name="reset">Reset</string>
    <string name="enter_email">Please Enter your Registered Email</string>
    <string name="username_login_error_username">Please enter username</string>
    <string name="username_login_error_email">Please enter valid email</string>
    <string name="password_error">Please enter Password</string>
    <string name="login_in">Login in....</string>
    <string name="sign_out">Sign Out</string>
    <string name="name">Name:</string>
    <string name="error_authentication_failed">Authentication Failed!</string>
    <string name="error_signIn">Sign in Failed</string>
    <string name="error_noUser">User not found!</string>
    <string name="message_emailSent">Email Sent! Please check your email.</string>
    <string name="error_input_email">Please enter email.</string>
    <string name="error_failed">Failed : Email already registered? </string>
    <string name="input_error_password">Password should be starting with a character containing atleast one special character,digit(0–9)</string>
    <string name="input_error_enterPassword">Please enter password</string>
    <string name="success">Success!</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="todo">Todo</string>
    <string name="exit">Exit</string>
    <string name="logout">Log Out</string>
    <string name="example_email">collegeapp@support.com</string>
    <string name="navigation_drawer_open">Navigaiton Drawer Open</string>
    <string name="navigation_drawer_close">Navigation Drawer Close</string>
    <string name="addImage">Add Image</string>
    <string name="selectFrom">Select from:</string>
    <string name="input_image_upload_error">Image Upload Failed</string>
    <string name="courses">Courses</string>
    <string name="events">Events</string>
    <string name="services">Services</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="add_title_todo">Set a title</string>
    <string name="todo_description_dialog_text">Add a description to your TODO, take notes, etc</string>
    <string name="todoTitleError">Title is required</string>
    <string name="save_todo">Save ToDo</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_todo_dialog">Are you sure you want delete all of your To-dos?</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="no_todo_found">No Todo Found!</string>
    <string name="add_one">Add one</string>
    <string name="message">Message</string>
    <string name="default_notification_channel_id">default notification</string>
    <string name="fcm_message">1234</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="delete_all__marked_todo_dialog">Delete all todos which are marked as done?</string>
    <string name="courseNameEx">Course Name</string>
    <string name="courseCodeEx">CODE 101</string>
    <string name="pill">pill for bottom sheet</string>
    <string name="notificationsInfoSheetText">Notifications</string>
    <string name="about">About</string>
    <string name="loremIpsumP1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ullamcorper ligula mauris, eu ultrices massa dictum iaculis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tempor, sem vitae tristique varius, enim velit gravida eros, sed convallis lacus nibh sed turpis. Praesent quis pharetra nisl, nec consequat odio. Praesent turpis nibh, venenatis ut ornare quis, suscipit nec lectus. Integer sed dictum sapien, sed vestibulum nisl. Sed vel pharetra elit. Aenean sed risus nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse magna lectus, rutrum sed pharetra id, placerat a est.</string>
    <string name="settings">Settings</string>
    <string name="notificationSheetText2">Notifications will include Announcements and Updates from Officials and Groups \n(Courses, Clubs, etc that you are a part of)</string>
    <string name="notificationSheetText3">Notifications will be sent by the faculties, Class Representatives, Club Managers, etc through a custom web portal </string>
    <string name="notificationSheetText4">"We aim to make IMPORTANT notifications stand out from all the other Whats App's personal messages and notifications"</string>
    <string name="notificationSheetText5">Some Android Phones might not receive notifications due to rogue Chinese ROMS, future updates might fix this.</string>
    <string name="notificationsSheetText6">Done with a notification? Swipe it away</string>
    <string name="todoBottomSheetText1">// TODO is a note taking system for the tasks that we aim to do in future.</string>
    <string name="todoBottomSheetText2">We can use it for taking notes, reminders, any data that is worth enough to be remembered :)</string>
    <string name="todoBottomSheetText3">Add a TODO with a title and description</string>
    <string name="todoBottomSheetText4">"Set a reminder for the TODO, pick the desied date and time followed by clicking on the clock icon (REQUIRED: make the clock icon green to set the reminder) "</string>
    <string name="todoBottomSheetText5">The status of the checkbox in front of the title indicates the status of the TODO</string>
    <string name="todoBottomSheetText6">Reminders might get suppressed due to the rogue Chinese ROMS, future updates might fix this.</string>
    <string name="clubName">Club Name</string>
    <string name="clubHead">Club Head:</string>
    <string name="clubField">Club Field</string>
    <string name="applicationStatus">Application Eligibility:</string>
    <string name="openForAll">Open for All</string>
    <string name="apply">Apply</string>
    <string name="upcomingEvents">Upcoming Events</string>
    <string name="none">None</string>
    <string name="comingSoon">Coming Soon, Check back later</string>
    <string name="perks">Perks</string>
    <string name="clubPerk">Club Perks</string>
    <string name="otherLink">Useful Links</string>
</resources>